Add test executable back to cmake build; fix quant name in main dispatch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ project(torchless CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 
+set(CMAKE_CXX_FLAGS_RELEASE "-O3")
+
 if(APPLE)
     set(LIBOMP_ROOT "/opt/homebrew/opt/libomp")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Xpreprocessor -fopenmp -I${LIBOMP_ROOT}/include")
@@ -11,14 +13,11 @@ else()
     find_package(OpenMP REQUIRED)
 endif()
 
-add_executable(torchless
-        main.cpp
-        src/backend/cpu/kernels.cpp
-        src/common/tensor.cpp
-        src/loader/parameters.cpp
-        src/model/mistral/modules.cpp
-        src/tokenizer/tokenizer.cpp
-)
+file(GLOB_RECURSE SRC CONFIGURE_DEPENDS "src/*.cpp")
+file(GLOB_RECURSE TEST_MISTRAL CONFIGURE_DEPENDS "test/mistral/*.cpp")
+
+add_executable(torchless main.cpp ${SRC})
+add_executable(test_exec ${SRC} ${TEST_MISTRAL})
 
 if(NOT APPLE)
     target_link_libraries(torchless PRIVATE OpenMP::OpenMP_CXX)
