--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ changes.txt
 model.bin
 .idea/
 cmake-build-debug/
-src/common/json.hpp
+include/json.hpp
 __pycache__/
 venv
 scripts/test/output.txt
